# AMNIVUM

./: .env.example  LICENSE.md  README.de.md  README.md  docker-compose.yml  pyproject.toml  pyrightconfig.json
amnivum.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
nucleus/: main.py
nucleus/ingenium/: __init__.py  affect.py  core.py  interpreter.py
nucleus/kortex/: __init__.py  input_handler.py
nucleus/memoria/: __init__.py  core.py  retriever.py  session_log.py  short.py
nucleus/shared/: __init__.py  messages.py  queues.py  services.py
tests/: conftest.py  test_ingenium_affect.py  test_ingenium_core.py  test_integration_qdrant.py  test_kortex_input.py  test_memoria_core.py  test_memoria_mid_write.py  test_memoria_session_log.py  test_memoria_short.py  test_messages.py
