[project]
name = "amnivum"
version = "0.1.0"
requires-python = ">=3.14"

dependencies = [
    "sentence-transformers",
    "transformers",
    "torch",
    "qdrant-client",
    "python-dotenv",
    "numpy",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
]

[tool.setuptools.packages.find]
include = ["nucleus*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra"

[tool.coverage.run]
source = ["nucleus"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"